fix: stage wrapping

--- a/src/components/stageLayout/StageLayout.styles.scss
+++ b/src/components/stageLayout/StageLayout.styles.scss
@@ -64,6 +64,7 @@
 
 	&__legalLinks {
 		display: flex;
+		flex-wrap: wrap;
 		position: absolute;
 		bottom: $grid-base-four;
 		left: $legal-information-links-left-default;
